feat: add name to the definition

--- a/src/components/engineer/engineer.module.css
+++ b/src/components/engineer/engineer.module.css
@@ -85,6 +85,10 @@
       & p {
         line-height: 1.6;
         color: var(--color-foreground-subtle);
+
+        & strong {
+          color: var(--color-foreground-subtler);
+        }
       }
     }
   }
